--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 								<header id="header">
 										<a href="index.html" class="logo"><strong>Kaisen Ye</strong> personal page</a>
 									<ul class="icons">
-										<li><a href="https://www.linkedin.com/in/kaisenye/"><i class="fa fa-linkedin fa-2x"></i></a></li>
-										<li><a href="https://www.instagram.com/kai_biubiu/"><i class="fa fa-instagram fa-2x"></i></a></li>
+										<li><a href="https://www.linkedin.com/in/kaisenye/" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a></li>
+										<li><a href="https://www.instagram.com/kai_biubiu/" target="_blank"><i class="fa fa-instagram fa-2x"></i></a></li>
 										<li><a href="mailto: kaisenye16@gmail.com"><i class="fa fa-envelope-o fa-2x"></i></a></li>
 									</ul>
 								</header>
@@ -40,7 +40,7 @@
 											</h2>
 											<p>Indiana University Junior Student | Software Engineer</p>
 										</header>
-										<p>I'm currently a junior student at <a href="https://www.indiana.edu/"><strong>Indiana University</strong></a>, double majoring in <b>Information Systems</b> and <b>Applied Mathematics</b>.
+										<p>I'm currently a junior student at <a href="https://www.indiana.edu/" target="_blank"><strong>Indiana University</strong></a>, double majoring in <b>Information Systems</b> and <b>Applied Mathematics</b>.
 											I'm passionate about exploring technology and mathematical fields, and the impact can have on people, communities, and businesses.
 											I have invested myself in more than offering what others need, but into learning how people think and the underlying reasons. 
 										</p> 
@@ -48,9 +48,9 @@
 										</p>
 									</div>
 									<span class="image object">
-										<img src="file:///Users/kaisenye/Desktop/Personal%20Webpage/IMG_5935%202.png" alt="" 
+										<img src="file:///Users/kaisenye/Downloads/kaisenye.github.io/IMG_5935%202.png" alt="" 
 											width=100%
-     										height=auto
+     										height=autos
 											style="padding-left: 20px;">
 									</span>
 								</section>
@@ -70,7 +70,7 @@
 													<li>Support students via email communication two days a week by simplifying math concepts for maximum understanding.</li>
 													<li>Arrange two specialized one-on-one and small group sessions per week for students that need customized instruction.</li>
 													</ul>
-												</p>
+												</p> <br />
 											</div>
 										</article>
 										<article>
