--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 										</p>
 									</div>
 									<span class="image object">
-										<img src="file:///Users/kaisenye/Downloads/kaisenye.github.io/IMG_5935%202.png" alt="" 
+										<img src="IMG_5935 2.png" alt="" 
 											width=100%
      										height=autos
 											style="padding-left: 20px;">
