--- a/gallery.html
+++ b/gallery.html
@@ -25,8 +25,9 @@
 							<header id="header">
 								<a href="index.html" class="logo"><strong>Kaisen Ye</strong> personal page</a>
 								<ul class="icons">
-									<li><a href="https://www.linkedin.com/in/kaisenye/"><i class="fa fa-linkedin fa-2x"></i></a></li>
-									<li><a href="https://www.instagram.com/kai_biubiu/"><i class="fa fa-instagram fa-2x"></i></a></li>
+									<li><a href="https://github.com/kaisenye" target="_blank"><i class="fa fa-github fa-2x"></i></a></li>
+									<li><a href="https://www.linkedin.com/in/kaisenye/" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a></li>
+									<li><a href="https://www.instagram.com/kai_biubiu/" target="_blank"><i class="fa fa-instagram fa-2x"></i></a></li>
 									<li><a href="mailto: kaisenye16@gmail.com"><i class="fa fa-envelope-o fa-2x"></i></a></li>
 								</ul>
 							</header>
@@ -455,8 +456,8 @@ print 'It took ' + i + ' iterations to sort the deck.';
 								</header>
 								<ul>
 									<li><a href="index.html">Homepage</a></li>
-									<li><a href="generic.html">Projects</a></li>
-									<li><a href="elements.html">Gallery</a></li>
+										<li><a href="projects.html">Projects</a></li>
+										<li><a href="gallery.html">Gallery</a></li>
 									<li>
 										<span class="opener">Submenu</span>
 										<ul>
