--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 
 							<!-- Header -->
 								<header id="header">
-										<a href="index.html" class="logo"><strong>Kaisen Ye</strong> personal page</a>
+										<a href="index.html" class="logo"><strong>Kaisen Ye</strong> <font size="+1">personal page</font></a>
 									<ul class="icons">
+										<li><a href="https://github.com/kaisenye" target="_blank"><i class="fa fa-github fa-2x"></i></a></li>
 										<li><a href="https://www.linkedin.com/in/kaisenye/" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a></li>
 										<li><a href="https://www.instagram.com/kai_biubiu/" target="_blank"><i class="fa fa-instagram fa-2x"></i></a></li>
 										<li><a href="mailto: kaisenye16@gmail.com"><i class="fa fa-envelope-o fa-2x"></i></a></li>
@@ -49,8 +50,6 @@
 									</div>
 									<span class="image object">
 										<img src="IMG_5935 2.png" alt="" 
-											width=100%
-     										height=autos
 											style="padding-left: 20px;">
 									</span>
 								</section>
@@ -127,51 +126,12 @@
 												<li><a href="#" class="button">More</a></li>
 											</ul>
 										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-											<h3>Nulla amet dolore</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-											<h3>Tempus ullamcorper</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3>Sed etiam facilis</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3>Feugiat lorem aenean</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3>Amet varius aliquam</h3>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
-											</ul>
-										</article>
 									</div>
 								</section>
 
 						</div>
 					</div>
+
 
 				<!-- Sidebar -->
 					<div id="sidebar">
@@ -191,8 +151,8 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="generic.html">Projects</a></li>
-										<li><a href="elements.html">Gallery</a></li>
+										<li><a href="projects.html">Projects</a></li>
+										<li><a href="gallery.html">Gallery</a></li>
 										<li>
 											<span class="opener">Submenu</span>
 											<ul>
@@ -235,19 +195,12 @@
 									<header class="major">
 										<h2>Get in touch</h2>
 									</header>
-									<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+									<p>Hope you've enjoyed my web page and learning about myself.</p>
 									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-										<li class="icon solid fa-phone">(000) 000-0000</li>
-										<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
-										Nashville, TN 00000-0000</li>
+										<li class="icon solid fa-envelope"><a href="#">kaisenye16@gmail.com</a></li>
+										<li class="icon solid fa-phone">+1 (346) 368-1097</li>
 									</ul>
 								</section>
-
-							<!-- Footer -->
-								<footer id="footer">
-									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-								</footer>
 
 						</div>
 					</div>
