--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 										</p>
 									</div>
 									<span class="image object">
-										<img src="IMG_5935 2.png" alt="" 
+										<img src="images/headShot.png" alt="" 
 											style="padding-left: 20px;">
 									</span>
 								</section>
@@ -62,8 +62,11 @@
 									<div class="features">
 										<article>
 											<span class="icon fa-gem"></span>
+											<!-- <img src="images/iuLogo.png" alt="" 
+											style="padding-left: 0spx; size: 10px;"> -->
 											<div class="content">
-												<h3>IU Undergraduate Math Tutor</h3>
+												<h3>IU Mathematics Department</h3>
+												<p>Undergraduate Math Tutor</p>
 												<p>
 													<ul>
 													<li>Support students via email communication two days a week by simplifying math concepts for maximum understanding.</li>
@@ -75,7 +78,7 @@
 										<article>
 											<span class="icon solid fa-paper-plane"></span>
 											<div class="content">
-												<h3>Data Analyst Intern</h3>
+												<h3>SOSV <font size="-1">Data Analyst Intern</font></h3>
 												<p>
 													<ul>
 													<li>Evaluated investment sourcing and deal screening for more than 10 Angel, Seed, and Series A and B cross-border technology startups with a focus on Cybersecurity, Fintech, and Software to target investments of more than $150,000.</li>
@@ -88,7 +91,8 @@
 										<article>
 											<span class="icon solid fa-rocket"></span>
 											<div class="content">
-												<h3>Private Equity Summer Analyst</h3>
+												<h3>Freestone Partners, LLC</h3>
+												<p>Private Equity Summer Analyst</p>
 												<p>
 													<ul>
 													<li>Performed industry and company research to seek investment in companies with $10 – 50 million in annual revenue and potential of substantial growth in the industry of manufacturing, distribution, supply chain, and industrial services.</li>
@@ -100,7 +104,8 @@
 										<article>
 											<span class="icon solid fa-signal"></span>
 											<div class="content">
-												<h3>Summer Intern</h3>
+												<h3>Sealand Securities Co., Ltd.</h3>
+												<p>Investing Summer Intern</p>
 												<p>
 													<ul>
 													<li>Consulted optimal solutions to shareholders equity structure, including holding-shares reduction and equity transfer.</li>
