--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,7 @@
 										<h2>Projects</h2>
 									</header>
 
-									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
+									<span class="image main"><img src="https://walfiegif.files.wordpress.com/2021/02/out-transparent.gif" alt="" /></span>
 									
 									<p> Something I've built..</p>
 									
