--- a/gallery.html
+++ b/gallery.html
@@ -496,18 +496,16 @@ print 'It took ' + i + ' iterations to sort the deck.';
 							</section>
 
 						<!-- Section -->
-							<section>
-								<header class="major">
-									<h2>Get in touch</h2>
-								</header>
-								<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-								<ul class="contact">
-									<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-									<li class="icon solid fa-phone">(000) 000-0000</li>
-									<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
-									Nashville, TN 00000-0000</li>
-								</ul>
-							</section>
+						<section>
+							<header class="major">
+								<h2>Get in touch</h2>
+							</header>
+							<p>Hope you've enjoyed my web page and learning about myself.</p>
+							<ul class="contact">
+								<li class="icon solid fa-envelope"><a href="#">kaisenye16@gmail.com</a></li>
+								<li class="icon solid fa-phone">+1 (346) 368-1097</li>
+							</ul>
+						</section>
 
 						<!-- Footer -->
 							<footer id="footer">
