--- a/gallery.html
+++ b/gallery.html
@@ -23,7 +23,7 @@
 
 							<!-- Header -->
 							<header id="header">
-								<a href="index.html" class="logo"><strong>Kaisen Ye</strong> personal page</a>
+									<a href="index.html" class="logo"><strong>Kaisen Ye</strong> <font size="+1">personal page</font></a>	
 								<ul class="icons">
 									<li><a href="https://github.com/kaisenye" target="_blank"><i class="fa fa-github fa-2x"></i></a></li>
 									<li><a href="https://www.linkedin.com/in/kaisenye/" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a></li>
@@ -472,45 +472,32 @@ print 'It took ' + i + ' iterations to sort the deck.';
 							</nav>
 
 						<!-- Section -->
-							<section>
-								<header class="major">
-									<h2>Ante interdum</h2>
-								</header>
-								<div class="mini-posts">
-									<article>
-										<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-										<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-									</article>
-									<article>
-										<a href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
-										<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-									</article>
-									<article>
-										<a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
-										<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-									</article>
-								</div>
-								<ul class="actions">
-									<li><a href="#" class="button">More</a></li>
-								</ul>
-							</section>
+						<section>
+							<header class="major">
+								<h2>Resume</h2>
+							</header>
+							<div class="mini-posts">
+								<article>
+									<a href="Files/KaisenYe_Resume.pdf" target="_blank" class="image"><img src="images/resumePic.png" alt="" /></a>
+								</article>
+							</div>
+							<ul class="actions">
+								<li><a href="Files/KaisenYe_Resume.pdf" target="_blank" class="button">View</a></li>
+							</ul>
+						</section>
 
 						<!-- Section -->
 						<section>
 							<header class="major">
 								<h2>Get in touch</h2>
 							</header>
-							<p>Hope you've enjoyed my web page and learning about myself.</p>
+							<p>Hope you've enjoyed my web page and learning more about me.</p>
+							<p>Feel free to reach out via:</p>
 							<ul class="contact">
 								<li class="icon solid fa-envelope"><a href="#">kaisenye16@gmail.com</a></li>
 								<li class="icon solid fa-phone">+1 (346) 368-1097</li>
 							</ul>
 						</section>
-
-						<!-- Footer -->
-							<footer id="footer">
-								<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-							</footer>
 
 					</div>
 				</div>
