--- a/projects.html
+++ b/projects.html
@@ -49,13 +49,13 @@
 									<section>
 										<div class="posts">
 											<article>
-												<a href="#" class="image"><img src="images/algoTrading.png" alt="" /></a>
+												<a href="https://github.com/kaisenye/Trading-Robot" target="_blank" class="image"><img src="images/algoTrading.png" alt="" /></a>
 												<h3>Algorithmic Trading Robot</h3>
 												<p>In today's dynamic markets, there are numerous opportunities to come. 
 													My team leverged computational power to explore and solidify several profitable trading strategies that outperform the U.S. market.</p>
 											</article>
 											<article>
-												<a href="#" class="image"><img src="images/mobileApp.png" alt="" /></a>
+												<a href="https://github.com/kaisenye/IU_tweetMobileApp" target="_blank" class="image"><img src="images/mobileApp.png" alt="" /></a>
 												<h3>IU Tweet Mobile App</h3>
 												<p>During Covid-19 pandemic, we are forced to be separated from our families and friends due to social distancing, so as the students and faculties at Indiana University.
 													I took the initiative to build this real-time tweet phone app, in the hope of allowing students to share their campus life and bringing the community back together.</p>
