--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/algoTrading.png" alt="" /></a>
-											<h3>Algorithmic Trading Robot</h3>
+											<a href="https://github.com/kaisenye/Trading-Robot" class="image"><img src="images/algoTrading.png" alt="" /></a>
+											<a href="https://github.com/kaisenye/Trading-Robot" target="blank"><h3>Algorithmic Trading Robot</h3></a>
 											<p>In today's dynamic markets, there are numerous opportunities to come. 
 												My team leverged computational power to explore and solidify several profitable trading strategies that outperform the U.S. market.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">More</a></li>
+												<li><a href="projects.html" class="button">More</a></li>
 											</ul>
 										</article>
 									</div>
