gallery update and fixed hyperlinks bugs

--- a/gallery.html
+++ b/gallery.html
@@ -54,25 +54,25 @@
 										<!-- <div class="gallery-item" data-index="2">
 											<img src="galleryImage/IU/iu2.jpg">
 										</div> -->
-										<div class="gallery-item" data-index="3">
+										<div class="gallery-item" data-index="2">
 											<img src="galleryImage/IU/iu3.jpg">
 										</div>
-										<div class="gallery-item" data-index="4">
+										<div class="gallery-item" data-index="3">
 											<img src="galleryImage/IU/iu4.jpg">
 										</div>
-										<div class="gallery-item" data-index="5">
+										<div class="gallery-item" data-index="4">
 											<img src="galleryImage/IU/iu5.jpg">
 										</div>
-										<div class="gallery-item" data-index="6">
+										<div class="gallery-item" data-index="5">
 											<img src="galleryImage/IU/iu6.jpg">
 										</div>
-										<div class="gallery-item" data-index="7">
+										<div class="gallery-item" data-index="6">
 											<img src="galleryImage/IU/iu7.jpg">
 										</div>
-										<div class="gallery-item" data-index="8">
+										<div class="gallery-item" data-index="7">
 											<img src="galleryImage/IU/iu8.jpg">
 										</div>
-										<div class="gallery-item" data-index="9">
+										<div class="gallery-item" data-index="8">
 											<img src="galleryImage/IU/iu9.jpg">
 										</div>
 									</div>
@@ -84,31 +84,31 @@
 										
 										<h3 id="gallery-header">Forest Wilderness</h3>
 										<div class="gallery-container">
-											<div class="gallery-item" data-index="1">
+											<div class="gallery-item" data-index="9">
 												<img src="galleryImage/forest/forest_1.JPG">
 											</div>
-											<div class="gallery-item" data-index="2">
+											<div class="gallery-item" data-index="10">
 												<img src="galleryImage/forest/forest_2.JPG">
 											</div>
-											<div class="gallery-item" data-index="3">
+											<div class="gallery-item" data-index="11">
 												<img src="galleryImage/forest/forest_3.JPG">
 											</div>
-											<div class="gallery-item" data-index="4">
+											<div class="gallery-item" data-index="12">
 												<img src="galleryImage/forest/forest_4.JPG">
 											</div>
-											<div class="gallery-item" data-index="5">
+											<div class="gallery-item" data-index="13">
 												<img src="galleryImage/forest/forest_5.JPG">
 											</div>
-											<div class="gallery-item" data-index="6">
+											<div class="gallery-item" data-index="14">
 												<img src="galleryImage/forest/forest_6.JPG">
 											</div>
-											<div class="gallery-item" data-index="7">
+											<div class="gallery-item" data-index="15">
 												<img src="galleryImage/forest/forest_7.JPG">
 											</div>
-											<div class="gallery-item" data-index="8">
+											<div class="gallery-item" data-index="16">
 												<img src="galleryImage/forest/forest_8.JPG">
 											</div>
-											<div class="gallery-item" data-index="9">
+											<div class="gallery-item" data-index="17">
 												<img src="galleryImage/forest/forest_9.JPG">
 											</div>
 										</div>
@@ -162,11 +162,11 @@
 								</header>
 								<div class="mini-posts">
 									<article>
-										<a href="Files/KaisenYe_Resume.pdf" target="_blank" class="image"><img src="images/resumePic.png" alt="" /></a>
+										<a href="Files/KaisenYe Resume.pdf" target="_blank" class="image"><img src="images/resumePic.png" alt="" /></a>
 									</article>
 								</div>
 								<ul class="actions">
-									<li><a href="Files/KaisenYe_Resume.pdf" target="_blank" class="button">View</a></li>
+									<li><a href="Files/KaisenYe Resume.pdf" target="_blank" class="button">View</a></li>
 								</ul>
 							</section>
 
