--- a/index.html
+++ b/index.html
@@ -68,8 +68,21 @@
 												<p>Data Analyst Intern</p>
 												<p>
 													<ul>
-													<li>Designed a data update strategy using Python pyclickup to connect startups’ raw data (financial reports, CMGR, CAC,customers volume/active users, growth profile, etc.) and ClickUp platform.</li>
-													<li>Customized applications on ClickUp to track onboarding progress and to improve overall efficiency of data tracking.</li>
+													<li>Initiated a data update strategy using <b>Webhook</b> and <b>urllib2</b> to sync startups’ data (financial reports, CMGR, CAC, customers volume/active users, growth profile, etc.) with ClickUp lists, saved <b>more than 90% of data transfer time</b>.</li>
+													<li>Customized KPI dashboards on <b>ClickUp</b> to track onboarding progress and to improve overall efficiency of data analysis.</li>
+													</ul>
+												</p>
+											</div>
+										</article>
+										<article>
+											<span class="icon solid fa-rocket"></span>
+											<div class="content">
+												<h3>Freestone Partners, LLC</h3>
+												<p>Summer Analyst</p>
+												<p>
+													<ul>
+													<li>Performed industry and company research using <b>Python</b> and <b>Scrapy</b> to search companies with $10 – 50 million in annual revenue and a potential gross IRR of 20 – 30% in the industry of manufacturing and industrial services.</li>
+													<li>Conducted financial analysis with <b>pyfolio</b> and <b>QuantLib</b> for acquiring a $30 million revenue company (Warfab LLC).</li>
 													</ul>
 												</p>
 											</div>
@@ -83,38 +96,13 @@
 												<p>Undergraduate Math Tutor</p>
 												<p>
 													<ul>
-													<li>Support students via email communication two days a week by simplifying math concepts for maximum understanding.</li>
+													<li>Support students via email communication two days a week by simplifying concepts in the subject of Finite Math.</li>
 													<li>Arrange specialized one-on-one and small group sessions for students that need customized instruction.</li>
 													</ul>
 												</p> <br />
 											</div>
 										</article>
-										<article>
-											<span class="icon solid fa-rocket"></span>
-											<div class="content">
-												<h3>Freestone Partners, LLC</h3>
-												<p>Private Equity Summer Analyst</p>
-												<p>
-													<ul>
-													<li>Performed industry and company research to seek investment in companies with $10 – 50 million in annual revenue and potential of substantial growth in the industry of manufacturing, distribution, supply chain, and industrial services.</li>
-													<li>Supported acquisition development for an industrial maintenance company (Warfab LLC) with $30 million revenue.</li>
-													</ul>
-												</p>
-											</div>
-										</article>
-										<article>
-											<span class="icon solid fa-dollar-sign"></span>
-											<div class="content">
-												<h3>Envision Capital Management Group</h3>
-												<p>Sustainable Investing Analyst</p>
-												<p>
-													<ul>
-													<li>Collaborated with fund managers to deliver weekly investment pitch based on in-depth research on markets.</li>
-													<li>Strengthened fundamental and technical analytical skillsets by participating in weekly analyst training sessions.</li>
-													</ul>
-												</p>
-											</div>
-										</article>
+										
 									</div>
 								</section>
 
@@ -177,11 +165,11 @@
 									</header>
 									<div class="mini-posts">
 										<article>
-											<a href="Files/KaisenYe_Resume.pdf" target="_blank" class="image"><img src="images/resumePic.png" alt="" /></a>
+											<a href="Files/KaisenYe Resume.pdf" target="_blank" class="image"><img src="images/resumePic.png" alt="" /></a>
 										</article>
 									</div>
 									<ul class="actions">
-										<li><a href="Files/KaisenYe_Resume.pdf" target="_blank" class="button">View</a></li>
+										<li><a href="Files/KaisenYe Resume.pdf" target="_blank" class="button">View</a></li>
 									</ul>
 								</section>
 
