--- a/projects.html
+++ b/projects.html
@@ -112,11 +112,11 @@
 								</header>
 								<div class="mini-posts">
 									<article>
-										<a href="Files/KaisenYe_Resume.pdf" target="_blank" class="image"><img src="images/resumePic.png" alt="" /></a>
+										<a href="Files/KaisenYe Resume.pdf" target="_blank" class="image"><img src="images/resumePic.png" alt="" /></a>
 									</article>
 								</div>
 								<ul class="actions">
-									<li><a href="Files/KaisenYe_Resume.pdf" target="_blank" class="button">View</a></li>
+									<li><a href="Files/KaisenYe Resume.pdf" target="_blank" class="button">View</a></li>
 								</ul>
 							</section>
 
