--- a/gallery.html
+++ b/gallery.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<!-- Connect to main.css file -->
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/css/font-awesome-4.7.0/css/font-awesome.min.css" />
 	</head>
@@ -29,7 +30,7 @@
 								<li><a href="https://github.com/kaisenye" target="_blank"><i class="fa fa-github fa-2x"></i></a></li>
 								<li><a href="https://www.linkedin.com/in/kaisenye/" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a></li>
 								<li><a href="https://www.instagram.com/kai_biubiu/" target="_blank"><i class="fa fa-instagram fa-2x"></i></a></li>
-								<li><a href="mailto: kaisenye16@gmail.com"><i class="fa fa-envelope-o fa-2x"></i></a></li>
+								<li><a href="mailto: kaisenye20@gmail.com"><i class="fa fa-envelope-o fa-2x"></i></a></li>
 							</ul>
 							</header>
 
@@ -178,7 +179,7 @@
 							<p>Hope you've enjoyed my web page and learning more about me.</p>
 							<p>Feel free to reach out via:</p>
 							<ul class="contact">
-								<li class="icon solid fa-envelope"><a href="#">kaisenye20@gmail.com</a></li>
+								<li class="icon solid fa-envelope"><a href="mailto: kaisenye20@gmail.com">kaisenye20@gmail.com</a></li>
 								<li class="icon solid fa-phone">+1 (346) 368-1097</li>
 							</ul>
 						</section>
