--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 											I'm passionate about exploring technology and mathematical fields, and the impact can have on people, communities, and businesses.
 											I have invested myself in more than offering what others need, but into learning how people think and the underlying reasons. 
 										</p> 
-										<p>After college, I plan on going into software industry, where I believe I can capitalize my skills gained and achieve my goals.
+										<p>After college, I plan on going into software industry, where I believe I can capitalize on my skills gained and achieve my goals.
 										</p>
 									</div>
 									<div class="image object">
@@ -63,7 +63,24 @@
 									</header>
 									<div class="features">
 										<article>
-											<span class="icon solid fa-database"></span>
+											<!-- <span class="icon solid fa-cc-paypal"></span> -->
+											<div class="content">
+												<h3>PayPal</h3>
+												<p>Data Science Intern</p>
+												<p>
+													<ul>
+													<li>Built and trained machine learning models with TensorFlow and Google AutoML to make predictions on buying
+														behaviors and to identify potential customers, resulting in over <b>98% average Precision-Recall scores on testing sets</b>.</li>
+													<li>Performed thorough Exploratory Data Analysis using <b>BigQuery</b> and <b>Python</b> on consumer online shopping event data
+														to delve into how end users interact with E-commerce websites and PayPal’s products and services.</li>
+													<li>Integrated well-trained classification models into production environment using <b>Vertex AI Python API</b>.</li>
+													<li>Implemented CircleCI validation for docstring and type hints with <b>mypy</b> and <b>pylint</b> in <b>10+ repositories</b>.</li>
+													</ul>
+												</p>
+											</div>
+										</article>
+										<article>
+											<!-- <span class="icon solid fa-database"></span> -->
 											<div class="content">
 												<h3>SOSV</h3>
 												<p>Data Analyst Intern</p>
@@ -76,20 +93,20 @@
 											</div>
 										</article>
 										<article>
-											<span class="icon solid fa-rocket"></span>
+											<!-- <span class="icon solid fa-rocket"></span> -->
 											<div class="content">
 												<h3>Freestone Partners, LLC</h3>
 												<p>Summer Analyst</p>
 												<p>
 													<ul>
 													<li>Performed industry and company research using <b>Python</b> and <b>Scrapy</b> to search companies with $10 – 50 million in annual revenue and a potential gross IRR of 20 – 30% in the industry of manufacturing and industrial services.</li>
-													<li>Conducted financial analysis with <b>pyfolio</b> and <b>QuantLib</b> for acquiring a $30 million revenue company (Warfab LLC).</li>
+													<li>Devised a Discounted Cash Flow model using <b>Excel</b> for acquisition development of a $30 million company.</li>
 													</ul>
 												</p>
 											</div>
 										</article>
 										<article>
-											<span class="icon solid fa-university"></span>
+											<!-- <span class="icon solid fa-university"></span> -->
 											<!-- <img src="images/iuLogo.png" alt="" 
 											style="padding-left: 0spx; size: 10px;"> -->
 											<div class="content">
