--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 											<h2>Hi, I’m Kaisen Ye<br /></h2>
 											<p class="subpara">Indiana University  |  Software Engineer  |  Photographer | Graphic Designer</p>
 										</header>
-										<p>I'm currently a junior student at <a href="https://www.indiana.edu/" target="_blank"><strong>Indiana University</strong></a>, double majoring in <b>Information Systems</b> and <b>Applied Mathematics</b>.
+										<p>I'm currently a senior student at <a href="https://www.indiana.edu/" target="_blank"><strong>Indiana University</strong></a>, double majoring in <b>Information Systems</b> and <b>Applied Mathematics</b>.
 											I'm passionate about exploring technology and mathematical fields, and the impact can have on people, communities, and businesses.
 											I have invested myself in more than offering what others need, but into learning how people think and the underlying reasons. 
 										</p> 
