update resume and work experience

--- a/index.html
+++ b/index.html
@@ -66,15 +66,13 @@
 											<!-- <span class="icon solid fa-cc-paypal"></span> -->
 											<div class="content">
 												<h3>PayPal</h3>
-												<p>Data Science Intern</p>
+												<p>Software Engineer Intern</p>
 												<p>
 													<ul>
-													<li>Built and trained machine learning models with TensorFlow and Google AutoML to make predictions on buying
-														behaviors and to identify potential customers, resulting in over <b>98% average Precision-Recall scores on testing sets</b>.</li>
-													<li>Performed thorough Exploratory Data Analysis using <b>BigQuery</b> and <b>Python</b> on consumer online shopping event data
-														to delve into how end users interact with E-commerce websites and PayPal’s products and services.</li>
-													<li>Integrated well-trained classification models into production environment using <b>Vertex AI Python API</b>.</li>
-													<li>Implemented CircleCI validation for docstring and type hints with <b>mypy</b> and <b>pylint</b> in <b>10+ repositories</b>.</li>
+														<li>Performed thorough Exploratory Data Analysis using <b>BigQuery</b>, <b>pandas</b>, <b>NumPy</b>, and <b>Plotly</b> on over <b>36 million
+															records</b> of online shopping event data to delve into how end users interact with E-commerce websites <b>98% average Precision-Recall scores on testing sets</b>.</li>
+														<li>Deployed a machine learning pipeline using <b>Kubernetes</b> to enable automatic management and scaling of the models.</li>
+														<li>Implemented <b>CircleCI</b> validation along with <b>mypy</b> and <b>pylint</b> for automated <b>CI/CD</b> workflow in <b>10+ repositories</b>.</li>
 													</ul>
 												</p>
 											</div>
@@ -86,8 +84,10 @@
 												<p>Data Analyst Intern</p>
 												<p>
 													<ul>
-													<li>Initiated a data update strategy using <b>Webhook</b> and <b>urllib2</b> to sync startups’ data (financial reports, CMGR, CAC, customers volume/active users, growth profile, etc.) with ClickUp lists, saved <b>more than 90% of data transfer time</b>.</li>
-													<li>Customized KPI dashboards on <b>ClickUp</b> to track onboarding progress and to improve overall efficiency of data analysis.</li>
+														<li>Experienced with Agile methodology <b>Sprint</b> with <b>ClickUp</b> for project management and <b>Git</b> for software development.</li>
+														<li>Designed and implemented a data update strategy using <b>Webhook</b> and <b>urllib2</b> to transfer startups’ data (financial data,
+															active users, growth profile, etc.) from Google Sheets to ClickUp, <b>saved more than 90% of data transfer time</b>.
+														</li>
 													</ul>
 												</p>
 											</div>
@@ -99,8 +99,8 @@
 												<p>Summer Analyst</p>
 												<p>
 													<ul>
-													<li>Performed industry and company research using <b>Python</b> and <b>Scrapy</b> to search companies with $10 – 50 million in annual revenue and a potential gross IRR of 20 – 30% in the industry of manufacturing and industrial services.</li>
-													<li>Devised a Discounted Cash Flow model using <b>Excel</b> for acquisition development of a $30 million company.</li>
+														<li>Performed industry and company research using <b>Python</b> and <b>Scrapy</b> to search companies with $10 – 50 million in annual revenue and a potential gross IRR of 20 – 30% in the industry of manufacturing and industrial services.</li>
+														<li>Devised a Discounted Cash Flow model using <b>Excel</b> for acquisition development of a $30 million company.</li>
 													</ul>
 												</p>
 											</div>
@@ -183,11 +183,11 @@
 									</header>
 									<div class="mini-posts">
 										<article>
-											<a href="Files/KaisenYe Resume.pdf" target="_blank" class="image"><img src="images/resumePic.png" alt="" /></a>
+											<a href="Files/Kaisen Ye Resume.pdf" target="_blank" class="image"><img src="images/resumePic.png" alt="" /></a>
 										</article>
 									</div>
-									<ul class="actions">
-										<li><a href="Files/KaisenYe Resume.pdf" target="_blank" class="button">View</a></li>
+									<ul class="actions"> 
+										<li><a href="Files/Kaisen Ye Resume.pdf" target="_blank" class="button">View</a></li>
 									</ul>
 								</section>
 
