add campground project

--- a/gallery.html
+++ b/gallery.html
@@ -144,9 +144,9 @@
 								</header>
 								<ul>
 									<li><a href="index.html">Homepage</a></li>
-										<li><a href="projects.html">Projects</a></li>
-										<li><a href="gallery.html">Gallery</a></li>
-									<li>
+									<li><a href="projects.html">Projects</a></li>
+									<li><a href="gallery.html">Gallery</a></li>
+									<li style="visibility: hidden;">
 										<span class="opener">Submenu</span>
 										<ul>
 											<li><a href="#">Lorem Dolor</a></li>
