--- a/index.html
+++ b/index.html
@@ -131,10 +131,8 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="https://github.com/kaisenye/Trading-Robot" class="image" target="blank"><img src="images/algoTrading.png" alt="" /></a>
-											<a href="https://github.com/kaisenye/Trading-Robot" target="blank"><h3>Algorithmic Trading Robot</h3></a>
-											<p>In today's dynamic markets, there are numerous opportunities to come. 
-												My team leverged computational power to explore and solidify several profitable trading strategies that outperform the U.S. market.</p>
+											<a href="https://github.com/kaisenye/campground_rating_webapp" class="image" target="blank"><img src="images/campground.jpg" alt="" /></a>
+											<a href="https://github.com/kaisenye/campground_rating_webapp" target="blank"><h3>Campground Rating Web App</h3></a>
 											<ul class="actions">
 												<li><a href="projects.html" class="button">More</a></li>
 											</ul>
@@ -166,7 +164,7 @@
 										<li><a href="index.html">Homepage</a></li>
 										<li><a href="projects.html">Projects</a></li>
 										<li><a href="gallery.html">Gallery</a></li>
-										<li>
+										<li style="visibility: hidden">
 											<span class="opener">Submenu</span>
 											<ul>
 												<li><a href="#">Lorem Dolor</a></li>
