--- a/projects.html
+++ b/projects.html
@@ -50,10 +50,9 @@
 									<section>
 										<div class="posts">
 											<article>
-												<a href="https://github.com/kaisenye/Trading-Robot" target="_blank" class="image"><img src="images/algoTrading.png" alt="" /></a>
-												<h3>Algorithmic Trading Robot</h3>
-												<p>In today's dynamic markets, there are numerous opportunities to come. 
-													My team leverged computational power to explore and solidify several profitable trading strategies that outperform the U.S. market.</p>
+												<a href="https://github.com/kaisenye/campground_rating_webapp" class="image" target="blank"><img src="images/campground.jpg" alt="" /></a>
+												<a href="https://github.com/kaisenye/campground_rating_webapp" target="blank"><h3>Campground Rating Web App</h3></a>
+												<p>Find out the most arresting campground in the nation!</p>
 											</article>
 											<article>
 												<a href="https://github.com/kaisenye/IU_tweetMobileApp" target="_blank" class="image"><img src="images/mobileApp.png" alt="" /></a>
@@ -61,7 +60,12 @@
 												<p>During Covid-19 pandemic, we are forced to be separated from our families and friends due to social distancing, so as the students and faculties at Indiana University.
 													I took the initiative to build this real-time tweet phone app, in the hope of allowing students to share their campus life and bringing the community back together.</p>
 											</article>
-											
+											<article>
+												<a href="https://github.com/kaisenye/Trading-Robot" target="_blank" class="image"><img src="images/algoTrading.png" alt="" /></a>
+												<h3>Algorithmic Trading Robot</h3>
+												<p>In today's dynamic markets, there are numerous opportunities to come. 
+													My team leverged computational power to explore and solidify several profitable trading strategies that outperform the U.S. market.</p>
+											</article>
 										</div>
 										
 									</section>
@@ -94,9 +98,9 @@
 								</header>
 								<ul>
 									<li><a href="index.html">Homepage</a></li>
-										<li><a href="projects.html">Projects</a></li>
-										<li><a href="gallery.html">Gallery</a></li>
-									<li>
+									<li><a href="projects.html">Projects</a></li>
+									<li><a href="gallery.html">Gallery</a></li>
+									<li style="visibility: hidden;">
 										<span class="opener">Submenu</span>
 										<ul>
 											<li><a href="#">Lorem Dolor</a></li>
