--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,6 +28,12 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
+    <video id="bg-video" autoplay loop muted>
+      <source src="bg-video.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
