--- a/public/index.html
+++ b/public/index.html
@@ -24,15 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Kaisen Ye Portfolio</title>
+    <title>Kaisen Ye</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-
-    <video id="bg-video" autoplay loop muted>
-      <source src="bg-video.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
+    <noscript>Kaisen Ye's Portfolio Website</noscript>
 
     <div id="root"></div>
     <!--
